// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCodeBlock dynamic content updates DOM when input changes 1`] = `
<div>
  <div
    class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
  >
    <pre
      class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="euiCodeBlock__code"
        data-code-language="javascript"
      >
        const value = 'State 1'
      </code>
    </pre>
  </div>
</div>
`;

exports[`EuiCodeBlock dynamic content updates DOM when input changes 2`] = `
<div>
  <div
    class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
  >
    <pre
      class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="euiCodeBlock__code"
        data-code-language="javascript"
      >
        const value = 'State 2'
      </code>
    </pre>
  </div>
</div>
`;

exports[`EuiCodeBlock fullscreen displays content in fullscreen mode 1`] = `
<div
  className="testClass1 testClass2 euiCodeBlock euiCodeBlock--hasControl euiCodeBlock--fontLarge euiCodeBlock--paddingLarge euiCodeBlock-isFullScreen"
>
  <pre
    className="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <code
      aria-label="aria-label"
      className="euiCodeBlock__code"
      data-code-language="javascript"
      data-test-subj="test subject string"
    >
      <span
        className="euiCodeBlock__line"
        key="node-0-0"
      >
        <span
          className="token keyword"
          key="node-1-0"
        >
          const
        </span>
         value 
        <span
          className="token operator"
          key="node-1-2"
        >
          =
        </span>
         
        <span
          className="token string"
          key="node-1-4"
        >
          "hello"
        </span>
      </span>
    </code>
  </pre>
  <div
    className="euiCodeBlock__controls"
  >
    <FullScreenButton
      isFullScreen={true}
      toggleFullScreen={[Function]}
    >
      <EuiButtonIcon
        aria-label="Collapse"
        className="euiCodeBlock__fullScreenButton"
        color="text"
        iconType="fullScreenExit"
        onClick={[Function]}
      >
        <button
          aria-label="Collapse"
          css="unknown styles"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <Insertion
            cache={
              Object {
                "insert": [Function],
                "inserted": Object {
                  "dsw53p-empty-text-hoverStyles-EuiButtonIcon": true,
                },
                "key": "css",
                "nonce": undefined,
                "registered": Object {},
                "sheet": StyleSheet {
                  "_alreadyInsertedOrderInsensitiveRule": true,
                  "_insertTag": [Function],
                  "before": null,
                  "container": <head>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon{color:#343741;}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:focus,.css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:active{background-color:rgba(211,218,230,0.2);}
                    </style>
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:hover{background-color:rgba(211,218,230,0.2);}
                    </style>
                    <style
                      type="text/css"
                    >
                      
 [data-focus-on-hidden] {
   pointer-events: none !important;
 }

                    </style>
                  </head>,
                  "ctr": 3,
                  "insertionPoint": undefined,
                  "isSpeedy": false,
                  "key": "css",
                  "nonce": undefined,
                  "prepend": undefined,
                  "tags": Array [
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon{color:#343741;}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:focus,.css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:active{background-color:rgba(211,218,230,0.2);}
                    </style>,
                    <style
                      data-emotion="css"
                      data-s=""
                    >
                      
                      .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:hover{background-color:rgba(211,218,230,0.2);}
                    </style>,
                  ],
                },
              }
            }
            isStringTag={true}
            serialized={
              Object {
                "map": undefined,
                "name": "dsw53p-empty-text-hoverStyles-EuiButtonIcon",
                "next": undefined,
                "styles": "color:#343741;&:focus,&:active{background-color:rgba(211,218,230,0.2);};label:empty;;;label:text;;;&:hover{background-color:rgba(211,218,230,0.2);};label:hoverStyles;;;;label:EuiButtonIcon;;",
                "toString": [Function],
              }
            }
          />
          <button
            aria-label="Collapse"
            className="euiButtonIcon euiButtonIcon--xSmall euiCodeBlock__fullScreenButton css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <EuiIcon
              aria-hidden="true"
              className="euiButtonIcon__icon"
              color="inherit"
              size="m"
              type="fullScreenExit"
            >
              <span
                aria-hidden="true"
                className="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreenExit"
                size="m"
              />
            </EuiIcon>
          </button>
        </button>
      </EuiButtonIcon>
    </FullScreenButton>
  </div>
</div>
`;

exports[`EuiCodeBlock line numbers renders highlighted line numbers 1`] = `
<div
  class="testClass1 testClass2 euiCodeBlock euiCodeBlock--hasLineNumbers euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line euiCodeBlock__line--isHighlighted"
      >
        <span
          aria-hidden="true"
          class="euiCodeBlock__lineNumber"
          data-line-number="1"
          style="width:8px"
        />
        <span
          class="euiCodeBlock__lineText"
          style="margin-left:16px;width:calc(100% - 8px)"
        >
          var some = 'code';

        </span>
      </span>
      <span
        class="euiCodeBlock__line"
      >
        <span
          aria-hidden="true"
          class="euiCodeBlock__lineNumber"
          data-line-number="2"
          style="width:8px"
        />
        <span
          class="euiCodeBlock__lineText"
          style="margin-left:16px;width:calc(100% - 8px)"
        >
          console.log(some);
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock line numbers renders line numbers 1`] = `
<div
  class="testClass1 testClass2 euiCodeBlock euiCodeBlock--hasLineNumbers euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line"
      >
        <span
          aria-hidden="true"
          class="euiCodeBlock__lineNumber"
          data-line-number="1"
          style="width:8px"
        />
        <span
          class="euiCodeBlock__lineText"
          style="margin-left:16px;width:calc(100% - 8px)"
        >
          var some = 'code';

        </span>
      </span>
      <span
        class="euiCodeBlock__line"
      >
        <span
          aria-hidden="true"
          class="euiCodeBlock__lineNumber"
          data-line-number="2"
          style="width:8px"
        />
        <span
          class="euiCodeBlock__lineText"
          style="margin-left:16px;width:calc(100% - 8px)"
        >
          console.log(some);
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock line numbers renders line numbers with a start value 1`] = `
<div
  class="testClass1 testClass2 euiCodeBlock euiCodeBlock--hasLineNumbers euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line"
      >
        <span
          aria-hidden="true"
          class="euiCodeBlock__lineNumber"
          data-line-number="10"
          style="width:16px"
        />
        <span
          class="euiCodeBlock__lineText"
          style="margin-left:24px;width:calc(100% - 16px)"
        >
          var some = 'code';

        </span>
      </span>
      <span
        class="euiCodeBlock__line"
      >
        <span
          aria-hidden="true"
          class="euiCodeBlock__lineNumber"
          data-line-number="11"
          style="width:16px"
        />
        <span
          class="euiCodeBlock__lineText"
          style="margin-left:24px;width:calc(100% - 16px)"
        >
          console.log(some);
        </span>
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props fontSize l is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontLarge euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props fontSize m is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontMedium euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props fontSize s is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props isCopyable is rendered 1`] = `
<EuiCodeBlock
  isCopyable={true}
>
  <div
    className="euiCodeBlock euiCodeBlock--hasControl euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
    style={Object {}}
  >
    <pre
      className="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
      style={Object {}}
      tabIndex={-1}
    >
      <code
        className="euiCodeBlock__code"
        data-code-language="text"
      >
        <span
          className="euiCodeBlock__line"
          key="node-0-0"
        >
          var some = 'code';

        </span>
        <span
          className="euiCodeBlock__line"
          key="node-0-1"
        >
          console.log(some);
        </span>
      </code>
    </pre>
    <div
      className="euiCodeBlock__controls"
    >
      <CopyButton
        textToCopy="var some = 'code';
console.log(some);"
      >
        <div
          className="euiCodeBlock__copyButton"
        >
          <EuiCopy
            afterMessage="Copied"
            textToCopy="var some = 'code';
console.log(some);"
          >
            <EuiToolTip
              delay="regular"
              display="inlineBlock"
              onMouseOut={[Function]}
              position="top"
            >
              <span
                className="euiToolTipAnchor"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <EuiButtonIcon
                  aria-label="Copy"
                  color="text"
                  iconType="copyClipboard"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                >
                  <button
                    aria-label="Copy"
                    css="unknown styles"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    type="button"
                  >
                    <Insertion
                      cache={
                        Object {
                          "insert": [Function],
                          "inserted": Object {
                            "dsw53p-empty-text-hoverStyles-EuiButtonIcon": true,
                          },
                          "key": "css",
                          "nonce": undefined,
                          "registered": Object {},
                          "sheet": StyleSheet {
                            "_alreadyInsertedOrderInsensitiveRule": true,
                            "_insertTag": [Function],
                            "before": null,
                            "container": <head>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon{color:#343741;}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:focus,.css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:active{background-color:rgba(211,218,230,0.2);}
                              </style>
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:hover{background-color:rgba(211,218,230,0.2);}
                              </style>
                            </head>,
                            "ctr": 3,
                            "insertionPoint": undefined,
                            "isSpeedy": false,
                            "key": "css",
                            "nonce": undefined,
                            "prepend": undefined,
                            "tags": Array [
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon{color:#343741;}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:focus,.css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:active{background-color:rgba(211,218,230,0.2);}
                              </style>,
                              <style
                                data-emotion="css"
                                data-s=""
                              >
                                
                                .css-dsw53p-empty-text-hoverStyles-EuiButtonIcon:hover{background-color:rgba(211,218,230,0.2);}
                              </style>,
                            ],
                          },
                        }
                      }
                      isStringTag={true}
                      serialized={
                        Object {
                          "map": undefined,
                          "name": "dsw53p-empty-text-hoverStyles-EuiButtonIcon",
                          "next": undefined,
                          "styles": "color:#343741;&:focus,&:active{background-color:rgba(211,218,230,0.2);};label:empty;;;label:text;;;&:hover{background-color:rgba(211,218,230,0.2);};label:hoverStyles;;;;label:EuiButtonIcon;;",
                          "toString": [Function],
                        }
                      }
                    />
                    <button
                      aria-label="Copy"
                      className="euiButtonIcon euiButtonIcon--xSmall css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      type="button"
                    >
                      <EuiIcon
                        aria-hidden="true"
                        className="euiButtonIcon__icon"
                        color="inherit"
                        size="m"
                        type="copyClipboard"
                      >
                        <span
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="copyClipboard"
                          size="m"
                        />
                      </EuiIcon>
                    </button>
                  </button>
                </EuiButtonIcon>
              </span>
            </EuiToolTip>
          </EuiCopy>
        </div>
      </CopyButton>
    </div>
  </div>
</EuiCodeBlock>
`;

exports[`EuiCodeBlock props language is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="html"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props overflowHeight is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--hasControl euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
  style="max-height:200px"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    style="max-height:200px"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
  <div
    class="euiCodeBlock__controls"
  >
    <button
      aria-label="Expand"
      class="euiButtonIcon euiButtonIcon--xSmall euiCodeBlock__fullScreenButton css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="fullScreen"
      />
    </button>
  </div>
</div>
`;

exports[`EuiCodeBlock props paddingSize l is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize m is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingMedium"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize none is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize s is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingSmall"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props transparentBackground is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--transparentBackground"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
      data-code-language="text"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props whiteSpace renders a pre block tag with a css class modifier 1`] = `
<div
  class="testClass1 testClass2 euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePre"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock renders a code block 1`] = `
<div
  class="testClass1 testClass2 euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code"
      data-code-language="text"
      data-test-subj="test subject string"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock virtualization renders a virtualized code block 1`] = `
<div
  class="testClass1 testClass2 euiCodeBlock euiCodeBlock--hasControl euiCodeBlock--fontSmall euiCodeBlock--paddingLarge"
  style="height:50%"
>
  <div
    data-eui="EuiAutoSizer"
  >
    <pre
      class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePre euiCodeBlock__pre--isVirtualized"
      style="position:relative;height:600px;width:600px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
      tabindex="0"
    >
      <code
        aria-label="aria-label"
        class="euiCodeBlock__code"
        data-code-language="text"
        data-test-subj="test subject string"
        style="height:36px;width:100%"
      >
        <span
          class="euiCodeBlock__line"
          style="position:absolute;left:0;top:0;height:18px;width:100%"
        >
          var some = 'code';

        </span>
        <span
          class="euiCodeBlock__line"
          style="position:absolute;left:0;top:18px;height:18px;width:100%"
        >
          console.log(some);
        </span>
      </code>
    </pre>
  </div>
  <div
    class="euiCodeBlock__controls"
  >
    <button
      aria-label="Expand"
      class="euiButtonIcon euiButtonIcon--xSmall euiCodeBlock__fullScreenButton css-dsw53p-empty-text-hoverStyles-EuiButtonIcon"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="fullScreen"
      />
    </button>
  </div>
</div>
`;
